# TDS-Project-2

./: autolysis (1).py  autolysis.py  autolysis1.py  autolysis2.py  autolysis9.py  autolyss.py  import os.py  pyproject.toml  requirement.txt
media/: README.md
