[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autolysis-analysis"
version = "0.1.0"
description = "A script for advanced dataset analysis"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pandas",
    "matplotlib",
    "seaborn",
    "openai==0.28"
]
